--- a/studysync/package.json
+++ b/studysync/package.json
@@ -21,8 +21,9 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "axios": "^1.8.2",
-    "framer-motion": "^12.4.11",
+    "framer-motion": "^12.5.0",
     "react-router-dom": "^7.3.0",
-    "react-tsparticles": "^2.12.2"
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0"
   }
 }
