--- a/studysync/package.json
+++ b/studysync/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^6.4.7",
     "axios": "^1.8.2",
     "framer-motion": "^12.5.0",
+    "multer": "^1.4.5-lts.1",
     "react-router-dom": "^7.3.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0"
